--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
 MarkupSafe==1.1.1
-nltk==3.5
+nltk>=3.4.5
 numpy==1.19.5
 regex==2020.11.13
 scikit-learn==0.24.1
